@@ -483,7 +483,8 @@ public class TicketFormService implements Serializable
         {
             for ( Response response : listResponse )
             {
-                ResponseRecap responseRecap = mapResponseRecap.get( new Integer( response.getEntry(  ).getIdEntry(  ) ) );
+                ResponseRecap responseRecap = mapResponseRecap.get( Integer.valueOf( 
+                            response.getEntry(  ).getIdEntry(  ) ) );
 
                 if ( responseRecap == null )
                 {
@@ -514,7 +515,7 @@ public class TicketFormService implements Serializable
                     }
                 }
 
-                mapResponseRecap.put( new Integer( response.getEntry(  ).getIdEntry(  ) ), responseRecap );
+                mapResponseRecap.put( Integer.valueOf( response.getEntry(  ).getIdEntry(  ) ), responseRecap );
             }
         }
 
